<resources>
    <string name="app_name">Warehouse manager</string>
    <string name="option_home">Home</string>
    <string name="option_accountant">Accountant</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_create_receipt">Create receipt</string>
    <string name="tv_import_management">Import management</string>
    <string name="tv_select_order_import">Select the import order</string>
    <string name="tv_select_order_export">Select the export order</string>
    <string name="btn_back">Go back</string>
    <string name="error_orders_no_data">No order Import</string>
    <string name="tv_oderId">Order #</string>
    <string name="tv_created_by">Created by</string>
    <string name="tv_order_to">Order to</string>
    <string name="login_title">Login</string>
    <string name="login_subtitle">To Warehouse management with your role</string>
    <string name="username_input_hint">Username</string>
    <string name="password_input_hint">Password</string>
    <string name="remember_checkbox_hint">Remember me</string>
    <string name="tv_forgot_password">Forgot password?</string>
    <string name="noti_login">Logging in…</string>
    <string name="error_miss_username">Please enter username</string>
    <string name="error_miss_password">Please enter password</string>
    <string name="error_500">Connect to server failed, please check your internet</string>
    <string name="role_employee">Employee</string>
    <string name="role_warehouse_keeper">Warehouse keeper</string>
    <string name="role_accountant">Accountant</string>
    <string name="title_create_receipt">Create receipt</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_cancel">Cancel</string>
    <string name="message_create_receipt">Are you sure to create receipt for the order id</string>
    <string name="success_create_receipt">Create receipt successful</string>
    <string name="tv_receipt">Receipt</string>
    <string name="tv_order">Order</string>
    <string name="tv_name">Name:</string>
    <string name="tv_order_date_2">Date order:</string>
    <string name="tv_employee_create">Employee create:</string>
    <string name="tv_supply">Supply</string>
    <string name="tv_address">Address:</string>
    <string name="tv_phone_number">Phone number:</string>
    <string name="tv_order_detail">Order detail</string>
    <string name="tv_item">Item</string>
    <string name="tv_quantity">Quantity</string>
    <string name="tv_price">Price</string>
    <string name="tv_import_date">Import date</string>
    <string name="tv_date">Date</string>
    <string name="tv_import_time">Import time:</string>
    <string name="tv_import_date_2">Import date:</string>
    <string name="tv_submit_create_receipt">I have read and confirm create receipt</string>
    <string name="btn_more">more</string>
    <string name="tv_supply_by">Supply by</string>
    <string name="tv_supply_for">Supply for order import</string>
    <string name="tv_import_at">Import at</string>
    <string name="tv_receipt_detail">Receipt detail</string>
    <string name="tab_receipt_info">Receipt information</string>
    <string name="tab_import_detail">Import</string>
    <string name="my_company_name">My company</string>
    <string name="tv_status">Status:</string>
    <string name="status_importing">Importing</string>
    <string name="status_done">Finish</string>
    <string name="warning_minimum_quantity">Quantity cannot be under 0</string>
    <string name="success_upsert_import_detail">Update import detail successful</string>
    <string name="warning_maximum_quantity">Quantity cannot be greater than order import quantity</string>
    <string name="tv_item_name">Item name:</string>
    <string name="tv_oder_price">Order price:</string>
    <string name="tv_import_price">Import price:</string>
    <string name="tv_import_quantity">Import quantity:</string>
    <string name="tv_import_detail">Import detail</string>
    <string name="tv_item_id">Item id:</string>
    <string name="btn_apply">Apply</string>
    <string name="scanner_prompt">Move your camera to the barcode</string>
    <string name="tv_show_hide_done_receipt">Show/Hide done receipt</string>
    <string name="warning_item_import_detail_not_found">This item is not in this receipt!</string>
    <string name="option_set_done_receipt">Finish importing</string>
    <string name="success_finish_importing">Finished import</string>
    <string name="option_import">Import</string>
    <string name="option_export">Export</string>
    <string name="tv_create_delivery_note">Create delivery note</string>
    <string name="tv_export_management">Export management</string>
    <string name="tv_check_item_stock">Check item stock</string>
    <string name="tv_check_item_stock_delivery">Check delivery stock</string>
    <string name="tv_order_by">Order by</string>
    <string name="tv_order_at">Order at</string>
    <string name="tv_delivery_note">Delivery note</string>
    <string name="tv_export_date">Export date</string>
    <string name="tv_in_stock">In stock</string>
    <string name="tv_submit_create_delivery_note">I have read and confirm create delivery note</string>
    <string name="warning_do_not_have_enough">Do not have enough quatity of</string>
    <string name="in_stock_available">Quantiy in stock are available for this export</string>
    <string name="warning_create_delivery_note_title">Warning create delivery note</string>
    <string name="warning_create_delivery_note_message">The quantity in stock are not available. Are you sure about creating delivery note for this order?</string>
    <string name="success_create_delivery_note">Create delivery note successful</string>
    <string name="tv_export_date_and_reason">Export date and reason</string>
    <string name="tv_export_type">Export type:</string>
    <string name="export_type_goods_delivery">Goods delivery</string>
    <string name="export_type_goods_destroy">Goods detroy</string>
    <string name="tv_export_reason">Export reason:</string>
    <string name="hint_item_search">Enter item id or name</string>
    <string name="tv_item_location">Location in stock</string>
    <string name="tv_quantity_initial">Initial</string>
    <string name="tv_quantity_current">Current</string>
    <string name="area">Area</string>
    <string name="shelf">Shelf</string>
    <string name="box">Box</string>
    <string name="tv_export_to">Export to</string>
    <string name="tv_export_at">Export at</string>
    <string name="tv_export_for">Export for</string>
    <string name="tv_delivery_note_detail">Delivery note detail</string>
    <string name="tv_show_hide_done_delivery_note">Show/Hide delivery note</string>
    <string name="success_finish_exporting">Finished export</string>
    <string name="tab_export_detail">Export</string>
    <string name="status_exporting">Exporting</string>
    <string name="tv_export_date_2">Export date:</string>
    <string name="tv_export_time">Export time:</string>
    <string name="tv_put_item_to_shelf">Put item to shelf</string>
    <string name="tv_box_id">Box id:</string>
    <string name="tv_quantity_2">Quantity:</string>
    <string name="success_put_item_to_shelf">Put item to shelf successful</string>
    <string name="warning_miss_item_id">Please scan or enter item id</string>
    <string name="warning_miss_box_id">Please scan or enter box id</string>
    <string name="warning_quantity_invalid">Item quantity cannot be less than 1</string>
    <string name="tv_quantity_not_in_shelf">Not in shelf</string>
    <string name="warning_item_not_found">Item not found</string>
    <string name="btn_ok">OK</string>
    <string name="tv_export_price">Export price:</string>
    <string name="tv_export_quantity">Export quantity:</string>
    <string name="tv_item_management">Item management</string>
    <string name="tv_log_out">Log out</string>
    <string name="tv_change_password">Change password</string>
    <string name="error_role_not_found">Role not found</string>
    <string name="option_delete_receipt">Delete receipt</string>
    <string name="option_delete_delivery_note">Delete delivery note</string>
    <string name="option_set_done_delivery_note">Finish exporting</string>
    <string name="success_delete_delivery_note">Delete delivery note successful</string>
    <string name="success_delete_receipt">Delete receipt successful</string>
    <string name="title_delete_receipt">Delete receipt</string>
    <string name="message_delete_receipt">Are you sure to delete this receipt? You can still create another receipt from order.</string>
    <string name="title_delete_delivery_note">Delete delivery note</string>
    <string name="message_delete_delivery_note">Are you sure to delete this receipt? You can still create another receipt from order.</string>
    <string name="error_login_fail">Username or Password incorrect</string>
    <string name="tv_view_all_item">All items</string>
</resources>