<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:gravity="center_vertical">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvItemName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tvItemId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            app:drawableStartCompat="@drawable/baseline_qr_code_16"
            android:drawablePadding="4dp"
            app:drawableTint="@color/gray_800" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvItemQuantity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:padding="4dp"
        android:gravity="center"
        android:text="@string/tv_quantity"/>

    <TextView
        android:id="@+id/tvItemInStock"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:padding="4dp"
        android:gravity="center"
        android:text="@string/tv_in_stock"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tvItemPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:padding="4dp"
        android:gravity="end"
        android:text="@string/tv_price"/>

</LinearLayout>