<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.PutItemToShelfActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:contentDescription="@string/btn_back"
            android:src="@drawable/baseline_arrow_back_ios_new_24"
            android:background="@drawable/background_ripple_oval"/>

        <TextView
            android:id="@+id/tvUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/tv_put_item_to_shelf"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/black"/>

        <ImageButton
            android:id="@+id/btnMore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:padding="16dp"
            android:contentDescription="@string/btn_back"
            android:src="@drawable/baseline_more_vert_24"
            android:background="@drawable/background_ripple_oval"/>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="bottom"/>

    </FrameLayout>

    <LinearLayout
        android:id="@+id/rvItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="8dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@color/gray_200">

        <TextView
            android:id="@+id/tvItemName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingHorizontal="16dp"
            android:text="@string/tv_item"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="16sp"/>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="1dp"
            android:layout_height="match_parent"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tv_quantity_not_in_shelf"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="1dp"
            android:layout_height="match_parent"/>

        <TextView
            android:id="@+id/itemQuantity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tv_in_stock"
            android:textColor="@color/black"
            android:textStyle="bold"/>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvItemNotOnShelf"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnScanBarcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:src="@drawable/baseline_qr_code_scanner_24"
            app:tint="@color/white"
            android:backgroundTint="@color/primary"/>

    </FrameLayout>

</LinearLayout>