<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.ViewAllItemsActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:contentDescription="@string/btn_back"
            android:src="@drawable/baseline_arrow_back_ios_new_24"
            android:background="@drawable/background_ripple_oval"/>

        <TextView
            android:id="@+id/tvUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/tv_view_all_item"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/black"/>

<!--        <ImageButton-->
<!--            android:id="@+id/btnMore"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="end"-->
<!--            android:padding="16dp"-->
<!--            android:contentDescription="@string/btn_back"-->
<!--            android:src="@drawable/baseline_more_vert_24"-->
<!--            android:background="@drawable/background_ripple_oval"/>-->

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="bottom"/>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:background="@color/gray_200">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:padding="4dp"
            android:layout_marginHorizontal="8dp"
            android:text="@string/tv_item"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="1dp"
            android:layout_height="match_parent"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:padding="4dp"
            android:gravity="center"
            android:text="@string/tv_quantity"
            android:textStyle="bold"
            android:textColor="@color/black"/>
    </LinearLayout>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvAllItems"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="100dp"
        android:clipToPadding="false"/>

</LinearLayout>