<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.SelectOrderExportActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:contentDescription="@string/btn_back"
            android:src="@drawable/baseline_arrow_back_ios_new_24"
            android:background="@drawable/background_ripple_oval"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/tv_check_item_stock"
            android:textStyle="bold"
            android:textSize="18sp"/>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="bottom"/>

    </FrameLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="32dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/edtSearchItem"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginHorizontal="8dp"
                android:padding="8dp"
                android:hint="@string/hint_item_search"
                android:drawablePadding="4dp"
                android:background="@null"
                android:inputType="text"
                android:imeOptions="actionDone"/>
            <ImageView
                android:id="@+id/btnScanBarcode"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingHorizontal="10dp"
                android:src="@drawable/baseline_qr_code_scanner_24"
                android:background="@drawable/background_ripple_rectangle"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="4dp"
        android:visibility="gone"/>

</LinearLayout>